# AndroidDamon

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chejdj/androiddamon/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/chejdj/androiddamon/: RemoteChat.aidl
app/src/main/cpp/: com_chejdj_androiddamon_nativeCall.h  keepLive.cpp
app/src/main/java/com/chejdj/androiddamon/: MainActivity.kt  MyApplication.kt  nativeCall.java
app/src/main/java/com/chejdj/androiddamon/accountsync/: AuthenticationService.kt  ProviderForSync.kt  SyncService.kt
app/src/main/java/com/chejdj/androiddamon/activity/: KeepLiveActivity.kt
app/src/main/java/com/chejdj/androiddamon/broadcast/: KeepliveDynamicReceiver.kt  KeepliveReceiver.kt  KeepliveStaticReceiver.kt
app/src/main/java/com/chejdj/androiddamon/damonjava/: LocalService.kt  RemoteService.kt
app/src/main/java/com/chejdj/androiddamon/keepmanager/: KeepLiveManager.kt
app/src/main/java/com/chejdj/androiddamon/manager/: KeepLiveManager.kt
app/src/main/java/com/chejdj/androiddamon/service/: KeepLiveJobService.kt  KeepLiveService.kt
app/src/main/java/com/chejdj/androiddamon/utils/: LaunchUtils.kt  LiveState.kt
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: authenticator.xml  sync.xml
app/src/test/java/com/chejdj/androiddamon/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
